# albert-plugin-dictionary

./: CMakeLists.txt  README.md  metadata.json
i18n/: dictionary_es.ts  dictionary_fr.ts  dictionary_ja.ts  dictionary_ko.ts  dictionary_pt.ts  dictionary_zh.ts
src/: plugin.h  plugin.mm
